Archive2/16/0769d2280557eb/output
main.cpp: In function 'int main(int, const char**)':
main.cpp:124:161: error: invalid initialization of non-const reference of type 'std::vector<std::basic_string<char> >&' from an rvalue of type 'std::vector<std::basic_string<char> >'
    uploadFile(allOK, region(), employeeID(), loanID(), loanCode(), loanAmount(), originationYear(), originationMonth(), originationDay(), numberOfPaymentsMade());
                                                                                                                                                                 ^
main.cpp:55:6: note: in passing argument 2 of 'void uploadFile(bool&, std::vector<std::basic_string<char> >&, std::vector<std::basic_string<char> >&, std::vector<std::basic_string<char> >&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&)'
 void uploadFile(bool &loadSuccess, vector<string> &reg, vector<string> &eID,
      ^
main.cpp: In function 'void uploadFile(bool&, std::vector<std::basic_string<char> >&, std::vector<std::basic_string<char> >&, std::vector<std::basic_string<char> >&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&)':
main.cpp:252:6: warning: unused variable 'numberOfOpen' [-Wunused-variable]
  int numberOfOpen = 0;
      ^
main.cpp:261:9: warning: unused variable 'one' [-Wunused-variable]
  double one = 1.000000;
         ^
main.cpp:263:6: warning: unused variable 'goodLines' [-Wunused-variable]
  int goodLines = 0;
      ^
main.cpp:279:14: warning: unused variable 'interestOverMonths' [-Wunused-variable]
  long double interestOverMonths = 0.00;
              ^
main.cpp:280:9: warning: unused variable 'monthlyPayment' [-Wunused-variable]
  double monthlyPayment = 0.00;
         ^
main.cpp:281:9: warning: unused variable 'principalPaid' [-Wunused-variable]
  double principalPaid = 0.00;
         ^
main.cpp:282:9: warning: unused variable 'unpaidPrincipal' [-Wunused-variable]
  double unpaidPrincipal = 0.00;
         ^
main.cpp:283:9: warning: unused variable 'onePlusInterestOverMonths' [-Wunused-variable]
  double onePlusInterestOverMonths = 0.00;
         ^
main.cpp:284:9: warning: unused variable 'monthsTimesLoanYears' [-Wunused-variable]
  double monthsTimesLoanYears = 0.00;
         ^
main.cpp:285:9: warning: unused variable 'monthsTimesLoanYearsMinusPaymentsMade' [-Wunused-variable]
  double monthsTimesLoanYearsMinusPaymentsMade = 0.00;
         ^
main.cpp:286:9: warning: unused variable 'unpaidPrincipalPower' [-Wunused-variable]
  double unpaidPrincipalPower = 0.00;
         ^
main.cpp:288:6: warning: unused variable 'numberOfLoansOpen' [-Wunused-variable]
  int numberOfLoansOpen = 0;
      ^
main.cpp:289:6: warning: unused variable 'numberOfLoansClosed' [-Wunused-variable]
  int numberOfLoansClosed = 0;
      ^
main.cpp:291:9: warning: unused variable 'loanTotalAmtOpen' [-Wunused-variable]
  double loanTotalAmtOpen = 0.00;
         ^
main.cpp:292:9: warning: unused variable 'loanTotalAmtClosed' [-Wunused-variable]
  double loanTotalAmtClosed = 0.00;
         ^
main.cpp:294:14: warning: unused variable 'totalPrincipalPaidClosed' [-Wunused-variable]
  long double totalPrincipalPaidClosed = 0.00;
              ^
main.cpp:295:14: warning: unused variable 'totalUnpaidPrincipalClosed' [-Wunused-variable]
  long double totalUnpaidPrincipalClosed = 0.00;
              ^
main.cpp:297:14: warning: unused variable 'totalPrincipalPaidOpen' [-Wunused-variable]
  long double totalPrincipalPaidOpen = 0.00;
              ^
main.cpp:298:14: warning: unused variable 'totalUnpaidPrincipalOpen' [-Wunused-variable]
  long double totalUnpaidPrincipalOpen = 0.00;
              ^
main.cpp:300:6: warning: unused variable 'line0' [-Wunused-variable]
  int line0 = 0;
      ^
main.cpp:304:6: warning: unused variable 'total' [-Wunused-variable]
  int total = 0;
      ^
main.cpp: In function 'void displayRegionDetails(int, const std::vector<std::basic_string<char> >&, const std::vector<std::basic_string<char> >&, const std::vector<std::basic_string<char> >&, const std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&)':
main.cpp:490:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < reg.size(); i++)
                     ^
main.cpp: In function 'void listEmployeeIDs(int, const std::vector<std::basic_string<char> >&)':
main.cpp:649:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int a = 0; a < eID.size(); a++)
                     ^
main.cpp:653:22: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    for (int b = 0; b < uniqueIDs.size(); b++)
                      ^
main.cpp:677:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int u = 0; u < uniqueIDs.size(); u++)
                     ^
